--- a/README
+++ b/README
@@ -5,6 +5,7 @@ C and C++ utilities library.
 adt     -- Abstract data structures in C.
 cg      -- Computational geometry structures and functions in C.
 cgpp    -- C++ wrapper of cg structures and functions.
+d2w     -- C++ 2-dimensional library.
 mem     -- Memory management functions in C.
 net     -- Network structures and functions in C.
 num     -- Numeric functions in C.
