Add a Python script to merge header and source files from modules and generate compressed header and source files.

--- a/README
+++ b/README
@@ -2,11 +2,13 @@ C and C++ utilities library.
 
 --------------------------------------------------------------------------------
 
-adt     -- Abstract data structures in C.
-cg      -- Computational geometry structures and functions in C.
-cgpp    -- C++ wrapper of cg structures and functions.
-d2w     -- C++ 2-dimensional library.
-mem     -- Memory management functions in C.
-net     -- Network structures and functions in C.
-num     -- Numeric functions in C.
-str     -- String manipulation routines in C.
+adt         -- Abstract data structures in C.
+cg          -- Computational geometry structures and functions in C.
+cgpp        -- C++ wrapper of cg structures and functions.
+d2w         -- C++ 2-dimensional library.
+mem         -- Memory management functions in C.
+net         -- Network structures and functions in C.
+num         -- Numeric functions in C.
+str         -- String manipulation routines in C.
+merge.py    -- Python script to merge header and source files from modules and
+               generate compressed header and source files.
